# ZabSpaceExercise

./: .gitignore  00-BUILD-SPECIFICATION.md  01-architecture-overview.md  01-doctrine-western.md  01-leo-isr-denial.md  02-geo-rpo-shadowing.md  02-tech-stack-recommendation.md  04-co-orbital-threat-escort.md  05-cell-interfaces.md  05-da-asat-crisis.md  05-mission-types-and-counters.md  06-bus-and-payload-operations.md  07-api-and-networking.md  08-build-roadmap.md  09-gui-principles.md  10-sda-3d-viewer.md  11-command-planning-and-tasking.md  12-safe-mode-loop.md  15-worked-asset-templates.md  CLAUDE.md  README.md  ROADMAP.md  memory.md  pyproject.toml  spacesim.config.yaml
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AUDIT-2026-06-COMMANDS.md  AUDIT-2026-06-UI-TTC.md  AUDIT-2026-06.md  DOCUMENTATION-PLAN.md  FUTURE-WORK.md  INDEX.md  OPERATOR-UI-DESIGN.md  SSN-DESIGN.md  TRAINING-MANUAL.md
docs/architecture/: 00-vision.md  01-concept-of-operations.md  02-system-context.md  03-architecture.md  04-domain-model.md  05-functional-requirements.md  06-non-functional-requirements.md  07-data-model.md  08-ui-architecture.md  09-api-specification.md  10-requirements-traceability-matrix.md  ADS-3500-role-scoped-command-enforcement.md  ADS-5100A-vignette-creator-session-and-ui.md  ADS-5100B-typed-parameters-and-per-cell-roe.md  INDEX.md  strategic-assumptions-register.md
docs/build-spec/: 01-context-and-scope.md  02-requirements-and-operations.md  03-architecture-and-data.md  04-nfr-milestones-and-risks.md  05-workflows-and-state-machines.md  06-test-plan-and-schedule.md  07-operator-console.md  (+2 more)
spacesim/: __init__.py  config.py
tools/: build_coastlines.py  record_walkthrough.py  render_manual.py  render_screens.py
(+486 files in other folders)
