[project]
name = "spacesim"
version = "0.1.0"
description = "Space Control & Orbital Warfare Exercise Simulator (PME wargaming tool)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Added in later phases as orbits/UI land.
orbits = ["skyfield>=1.45", "sgp4>=2.20"]
content = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "hypothesis>=6.0"]

[tool.pytest.ini_options]
# Make the repo root importable so tests can `import spacesim...`.
pythonpath = ["."]
testpaths = ["spacesim/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["spacesim*"]
